extends Node
@export var button_scene: PackedScene
@onready var list_container = $Companys_Container/Company_list_Container/Company_Container
@onready var money_label = $Money/control/panel/VBoxContainer/MoneyLabel
@onready var point_label = $Money/control/panel/VBoxContainer/PointLabel 	

const BASE_URL = "http://127.0.0.1:8080"


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	## ì‘ë‹µì´ ì˜¤ë©´ ì‹¤í–‰í•  í•¨ìˆ˜ ì—°ê²°
	#http_request.request_completed.connect(_on_request_completed)
	#
	## ì‹¤ì œ ì„œë²„ ì£¼ì†Œë¡œ ìš”ì²­ ë³´ë‚´ê¸°(Spring ì„œë²„ ì£¼ì†Œ)
	#http_request.request(BASE_URL) # ì—¬ê¸° ë¶€ë¶„ì„ ë³€ê²½í•˜ë©´ ëœë‹¤.
	#print("ì„œë²„ì— ë°ì´í„° ìš”ì²­ ì¤‘...")
	
	# print(">>> [DEBUG] í˜„ì¬ ìŠ¤í¬ë¦½íŠ¸ ë…¸ë“œì˜ ì ˆëŒ€ ê²½ë¡œ:", self.get_path())
	
	## JavaScript Bridgeê°€ ì´ ë…¸ë“œì˜ 'receive_assets'í•¨ìˆ˜ë¥¼ í˜¸ì¶œí•˜ë„ë¡ ì—°ê²°
	JavaScriptBridge.eval(
		"window.receive_assets = function(json_data) {" + 
		"  var game_root = document.getElementById('canvas')._godot_engine;" +
		"  if (game_root) {" +
		# ğŸ“Œ ê²½ë¡œë¥¼ ë‹¤ì‹œ /root/game_mainìœ¼ë¡œ ì§€ì •í•©ë‹ˆë‹¤.
		"    game_root.get_node(\"/root/game_main\").call(\"receive_assets\", json_data);" + 
		"  }" +
		"}"
	)
	
	# ğŸ“Œ íšŒì‚¬ ëª©ë¡ì„ ìˆ˜ì‹ í•  í•¨ìˆ˜ë¥¼ JavaScript Bridgeì— ë“±ë¡
	JavaScriptBridge.eval(
		"window.receive_company_list = function(json_data) {" + 
		"  var game_root = document.getElementById('canvas')._godot_engine;" +
		"  if (game_root) {" +
		"    game_root.get_node(\"/root/game_main\").call(\"receive_company_list\", json_data);" + 
		"  }" +
		"}"
	)
	
	# ğŸ“Œ ì„œë²„ API í˜¸ì¶œ
	JavaScriptBridge.eval("getCompanyListToGodot()")
	print("ì„œë²„ì— íšŒì‚¬ ëª©ë¡ ë°ì´í„° ìš”ì²­ ì¤‘...")
	
	
## ì„œë²„ì—ì„œ ì‘ë‹µì´ ì™”ì„ ë•Œ ì‹¤í–‰ë˜ëŠ” í•¨ìˆ˜
#func _on_request_completed(result, response_code, headers, body):
	#if response_code == 200: # ì„±ê³µ
		## ë°›ì•„ì˜¨ ë°ì´í„°(body)ë¥¼ ê¸€ì -> JSONìœ¼ë¡œ ë³€í™˜
		#var json_data = JSON.parse_string(body.get_string_from_utf8())
		#
		#print("ì„œë²„ ì‘ë‹µ ë°ì´í„° : ", json_data)
		#
		## ê¸°ì¡´ì— ë§Œë“  í•¨ìˆ˜ë¥¼ ê·¸ëŒ€ë¡œ ì¬ì‚¬ìš©
		#create_company_buttons(json_data)
	#else:
		#print("ì„œë²„ ì—°ê²° ì‹¤íŒ¨. ì—ëŸ¬ ì½”ë“œ : ", response_code)
	
# ëª©ë¡ì„ ìƒì„±í•˜ëŠ” í•¨ìˆ˜
func create_company_buttons(company_list):
	for child in list_container.get_children():
		child.queue_free()
		
	# ë°ì´í„° ê°œìˆ˜ë§Œí¼ ë°˜ë³µí•´ì„œ ë²„íŠ¼ ìƒì„±
	for data in company_list:
		# ë²„íŠ¼ ì¸ìŠ¤í„´ìŠ¤(ì‹¤ì²´) ìƒì„±
		var btn = button_scene.instantiate()
		
		# ì»¨í…Œì´ë„ˆ ìì‹ìœ¼ë¡œ ì¶”ê°€
		list_container.add_child(btn)
		
		# ë²„íŠ¼ì— ë°ì´í„° ì£¼ì…
		btn.setup(data)
		
		# ë²„íŠ¼ í´ë¦­ ì‹ í˜¸ ì—°ê²°
		# ë²„íŠ¼ì´ í´ë¦­ë˜ë©´ ë©”ì¸ ìŠ¤í¬ë¦½íŠ¸ì˜ _on_company_selected í•¨ìˆ˜ê°€ ì‹¤í–‰ë˜ê²Œ ì—°ê²°
		btn.company_selected.connect(_on_company_selected)


# íŠ¹ì • íšŒì‚¬ê°€ í´ë¦­ë˜ì—ˆì„ ë•Œ ì‹¤í–‰ë  í•¨ìˆ˜
func _on_company_selected(data):
	print("ì„ íƒëœ íšŒì‚¬: ", data["name"])
	# ì—¬ê¸°ì— ì˜¤ë¥¸ìª½ ê·¸ë˜í”„ í™”ë©´ì„ ê°±ì‹ í•˜ëŠ” ì½”ë“œë¥¼ ë„£ëŠ”ë‹¤.
	# ì˜ˆì‹œ) update_graph(data["id"])

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass

# íŠœí† ë¦¬ì–¼ í™”ë©´ ë¹„í™œì„±í™”
func hide_tutorial() -> void:
	$Tutorial.visible = false
# íŠœí† ë¦¬ì–¼ í™”ë©´ í™œì„±í™”
func _on_tutorial_button_pressed() -> void:
	$Tutorial.visible = true


# ë³´ìœ  ìê¸ˆ X ì•„ì´ì½˜ í´ë¦­ì‹œ í™”ë©´ ë¹„í™œì„±í™”
func _on_money_cancel_button_pressed() -> void:
	$Money.visible = false

# ë³´ìœ  ìê¸ˆ í™”ë©´ í™œì„±í™”/ë¹„í™œì„±í™”
func _on_money_button_pressed() -> void:
	print("Money ë²„íŠ¼ ëˆŒë¦¼")
	$Money.visible = true
	JavaScriptBridge.eval("getMemberAssetsToGodot()")
	
func receive_assets(json_data):
	# í•¨ìˆ˜ ì‹¤í–‰ ì—¬ë¶€ë¥¼ ì¦‰ì‹œ í™•ì¸(ë¸Œë¼ìš°ì € ì½˜ì†” í™•ì¸)
	print(">>> [DEBUG] receive_assets í•¨ìˆ˜ ì‹¤í–‰ ì‹œì‘ <<<")
	
	# 1. JSON ë¬¸ìì—´ íŒŒì‹± (Godot 4.x íŒŒì‹± ë°©ì‹ ì ìš©)
	var result = JSON.parse_string(json_data)
	
	if result.error != OK:
		print("!!! [ERROR-GD] JSON íŒŒì‹± ì˜¤ë¥˜:", result.error_string)
		return
		
	var data = result.result
	
	if typeof(data) == TYPE_DICTIONARY:
		
		var property = data.get("property", 0)
		var pt = data.get("pt", 0)
		
		print(">>> [DEBUG-GD] ìˆ˜ì‹ ëœ ìì‚°:", property)
		
		# ğŸ“Œ 2. CRITICAL CHECK: UI ë…¸ë“œ ì°¸ì¡° í™•ì¸
		if money_label == null:
			print("!!! [CRITICAL ERROR-GD] money_label ë…¸ë“œ ì°¸ì¡° ì‹¤íŒ¨! ê²½ë¡œ ì˜¤ë¥˜.")
			# ğŸ“Œ ì´ ì½”ë“œê°€ ë¸Œë¼ìš°ì € ì½˜ì†”ì— ë– ì•¼ í•©ë‹ˆë‹¤!
			print("!!! [DEBUG] money_label ì˜ˆìƒ ê²½ë¡œ:", $Money/Money_Overlay/Money_Screen/VBoxContainer/MoneyLabel.get_path())
			return
		if point_label == null:
			print("!!! [CRITICAL ERROR-GD] point_label ë…¸ë“œ ì°¸ì¡° ì‹¤íŒ¨! ê²½ë¡œ ì˜¤ë¥˜.")
			return
		
		# ğŸ“Œ 3. UI ì—…ë°ì´íŠ¸: set_deferred ìœ ì§€
		money_label.set_deferred("text", str(property))
		point_label.set_deferred("text", str(pt))
		
		# ì‹œê°ì  í™•ì¸ (Labelì´ í™”ë©´ì— ì¡´ì¬í•œë‹¤ë©´ ë¹¨ê°„ìƒ‰ìœ¼ë¡œ ë³€í•´ì•¼ í•¨)
		money_label.set_deferred("modulate", Color.RED)
		
	else:
		print("!!! [ERROR-GD] ìˆ˜ì‹ ëœ ë°ì´í„°ê°€ Dictionary í˜•íƒœê°€ ì•„ë‹™ë‹ˆë‹¤. íƒ€ì…:", typeof(data))


# Setting í™”ë©´ í™œì„±í™”
func _on_setting_button_pressed() -> void:
	$Setting_Menu.visible = true
# Setting í™”ë©´ ë¹„í™œì„±í™”
func _on_setting_cancel_pressed() -> void:
	$Setting_Menu.visible = false
# ì €ì¥ í›„ ë‚˜ê°€ê¸° (ì €ì¥í•˜ëŠ” ì½”ë“œ ì‘ì„± í•„ìš”)
func _on_save_and_exit_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/main_menu.tscn")


# ë‰´ìŠ¤ í™”ë©´ í™œì„±í™”/ë¹„í™œì„±í™”
func _on_news_button_pressed() -> void:
	if $News.visible:
		$News.visible = false
	else:
		$News.visible = true


# íŒíŠ¸ ìƒ/ì¤‘/í•˜ ì„ íƒ í™”ë©´ í™œì„±í™”
func _on_hint_button_pressed() -> void:
	$Hint.visible = true


# ë°°ê²½ í´ë¦­ì‹œ í™”ë©´ ë¹„í™œì„±í™”
func _on_news_cancel_button_pressed() -> void:
	$News.visible = false # ë‰´ìŠ¤ ë¹„í™œì„±í™”
	$Hint.visible = false # íŒíŠ¸ ë¹„í™œì„±í™”

# ğŸ“Œ DBì—ì„œ ë°›ì€ íšŒì‚¬ ëª©ë¡ ë°ì´í„°ë¥¼ ì²˜ë¦¬í•˜ëŠ” ìƒˆë¡œìš´ í•¨ìˆ˜
func receive_company_list(json_data):
	print(">>> [DEBUG-GD] íšŒì‚¬ ëª©ë¡ ë°ì´í„° ìˆ˜ì‹ ë¨ <<<")
	
	# JSON ë¬¸ìì—´ íŒŒì‹±
	var result = JSON.parse_string(json_data)
	
	if result.error != OK:
		print("!!! [ERROR-GD] íšŒì‚¬ ëª©ë¡ JSON íŒŒì‹± ì˜¤ë¥˜:", result.error_string)
		return
		
	var company_list = result.result
	
	if typeof(company_list) == TYPE_ARRAY:
		print(">>> [DEBUG-GD] íšŒì‚¬ ëª©ë¡ ê°œìˆ˜:", company_list.size())
		
		# ê¸°ì¡´ í•¨ìˆ˜ë¥¼ ì¬ì‚¬ìš©í•˜ì—¬ ë²„íŠ¼ ìƒì„±
		create_company_buttons(company_list)
	else:
		print("!!! [ERROR-GD] ìˆ˜ì‹ ëœ ë°ì´í„°ê°€ Array í˜•íƒœê°€ ì•„ë‹™ë‹ˆë‹¤. ì„œë²„ ì‘ë‹µ í™•ì¸ í•„ìš”.")
